--- a/web/dart-examples.css
+++ b/web/dart-examples.css
@@ -12,18 +12,14 @@ h1, p {
   color: #333;
 }
 
-#sample_container_id {
-  width: 100%;
-  height: 400px;
-  position: relative;
-  border: 1px solid #ccc;
-  background-color: #fff;
+h2 {
+  color: #666;
 }
 
-#sample_text_id {
-  font-size: 24pt;
-  text-align: center;
-  margin-top: 140px;
-  -webkit-user-select: none;
-  user-select: none;
+dt {
+  font-weight: bold;
+}
+dd {
+  margin-bottom: 0.5em;
+  margin-left: 2em;
 }
